packages section was seperated into new page and few changes are applied

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><i class="fas fa-hiking"></i> travel.com</a>
+        <a href="index.html" class="logo"><i class="fas fa-hiking"></i> travel.com</a>
         <nav class="navbar">
             <div id="nav-close" class="fas fa-times"></div>
             <a href="#home">home</a>
             <a href="#category">Adventures</a>
-            <a href="#packages">packages</a>
+            <a href="packages.html">packages</a>
             <a href="#contact">contact</a>
         </nav>
         <div class="icons">
