removed packages section in landing page

--- a/packages.html
+++ b/packages.html
@@ -82,7 +82,7 @@
     </section> -->
     <section class="packages" id="packages">
 
-        <h1 class="heading">popular packages</h1>
+        <h1 class="heading">our popular packages</h1>
     
         <div class="box-container">
     
