--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img src="images/category-3.jpg" alt="">
                 <h3>Canoeing</h3>
                 <p>Canoeing is an activity which involves paddling a canoe with a single-bladed paddle.</p>
-                <a href="https://en.wikipedia.org/wiki/Canoeing" class="btn">read more</a>
+                <a href="https://en.wikipedia.org/wiki/Canoeing" class="btn btn2">read more</a>
             </div>
     
         </div>
