--- a/packages/manali.html
+++ b/packages/manali.html
@@ -44,13 +44,12 @@
                 <div class="image package-image">
                     <img src="../images/img-1.jpg" alt="">
                 </div>
-                <div class="content">
-                    <!-- <h3>Manali Package</h3> -->
-                    <div class="price package-price">Rs 5,999 - Rs 8,999</div>
-                </div>
+            </div>
+            <div class="package-price">
+                <h2>Rs 5,999 - Rs 8,999</h2>
             </div>
             <div class="package-details">
-                <p>Kullu Manali Shimla has always been a very popular destination for the old, young travelers as well as newly married couples who look for cheapest Manali tour packages & Manali Honeymoon Packages to experience the perfect solitude and calmness at its best.</p>
+                <p>Kullu Manali Shimla has always been a very popular destination for the old, young travelers as well as newly married couples who look for cheapest Manali tour packages & Manali Honeymoon Packages to experience the perfect solitude and calmness at its best. Manali, also known as the "resort town" of Himachal Pradesh, is a popular hill station in North India. Places to visit in Manali are secluded from the glittering world, hidden amid the lush deodar and pine trees. Manali is a destination with settings straight out of a fairy tale, providing you with a beautiful view of the Himalayas embellished with glittering streams of water. </p><p>A trip to places to visit in Manali is a refreshing experience for one's tired mind and body. Your senses will be mesmerised by the sight of lush green valleys and a whiff of pines lingering in the cold breeze at the places to visit in Manali. The town is split into New Manali and Old Manali by the Manalsu river. Each part of the town has its own distinct appeal. Old Manali is renowned for its hippy and bohemian way of life whereas New Manali boasts several restaurants and shopping places. Some of the places to visit in Manali are Naggar Castle, Shoja Himachal Pradesh, Jalori Jot and Jibhi. Plan a trip to enjoy the bounties of nature to the fullest during the best time to visit Manali.</p>
             </div>
         </div>
     
