Resolved the issue of alignment of Read more buttons

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="box">
                 <img src="images/category-3.jpg" alt="">
                 <h3>Canoeing</h3>
-                <p>Canoeing is an activity which involves paddling a canoe with a single-bladed paddle.</p>
+                <p>Canoeing is an activity which involves paddling a canoe with a single-bladed paddle.</p><br><br>
                 <a href="https://en.wikipedia.org/wiki/Canoeing" class="btn">read more</a>
             </div>
     
