--- a/index.html
+++ b/index.html
@@ -20,11 +20,20 @@
             <a href="#packages">packages</a>
             <a href="#contact">contact</a>
         </nav>
-        <div class="icons">
+         <div class="icons">
             <div id="menu-btn" class="fas fa-bars"></div> 
             <div id="search-btn" class="fas fa-search"></div>
-          
-        </div>
+      </div>
+    </header>
+
+    <div class="search-form">
+        <div id="close-search" class="fas fa-times"></div>
+        <form action="">
+        <input type="search" name="" placeholder="search here..." id="search-box">
+        <label for="search-box" class="fas fa-search"></label>
+        </form>
+    </div>
+
     </header>
 
     <div class="search-form">
