Alligned the buttons properly

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img src="images/category-3.jpg" alt="canoeingImg">
                 <h3>Canoeing</h3>
                 <p>Canoeing is an activity which involves paddling a canoe with a single-bladed paddle.</p>
-                <a href="https://en.wikipedia.org/wiki/Canoeing" class="btn">read more</a>
+                <a href="https://en.wikipedia.org/wiki/Canoeing" class="btn3">read more</a>
             </div>
     
         </div>
