--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="content">
                     <span>never stop</span>
                     <h3>exploring</h3>
-                    <p>Travel.com offers best deals on India tour packages.</p>
+                    <p><b>Discover boundless horizons with Travel.com</b></p>
                     <a href="#category" class="btn">get started</a>
                 </div>
                 </div>  
@@ -130,13 +130,8 @@
                 </div>
                 <div class="content">
                     <h3>Jaipur Package</h3>
-
                     <p>We organise Jaipur &amp; Rajasthan tours that offer incredible attractions like Forts and Palaces, Deserts, Traditional Villages, colorful cattle fairs, sacred places, camel safaris, beautiful lakes, hill stations and the people. </p>
                     <div class="price">Rs 11,999 - Rs15,999</div>
-
-                    <p>We organise Jaipur & Rajasthan tours that offer incredible attractions like Forts and Palaces, Deserts, Traditional Villages, colorful cattle fairs, sacred places, camel safaris, beautiful lakes, hill stations and the people. </p>
-                    <div class="price">Rs 11,999 - Rs 15,999</div>
-
                     <a href="#contact" class="btn">explore now</a>
                 </div>
             </div>
