--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <a href="#" class="logo"><i class="fas fa-hiking"></i> travel.com</a>
         <nav class="navbar">
             <div id="nav-close" class="fas fa-times"></div>
-            <a href="#home">home</a>
-            <a href="#category">Adventures</a>
-            <a href="#packages">packages</a>
-            <a href="#contact">contact</a>
+            <a href="#home"><b>Home</b></a>
+            <a href="#category"><b>Adventures</b></a>
+            <a href="#packages"><b>Packages</b></a>
+            <a href="#contact"><b>Contact</b></a>
         </nav>
         <div class="icons">
             <div id="menu-btn" class="fas fa-bars"></div> 
